Bug 493977 - Only last-enrolled finger is shown in the fingerprint enrollment dialog's finger list
Summary: Only last-enrolled finger is shown in the fingerprint enrollment dialog's fin...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-10-02 16:21 UTC by Nate Graham
Modified: 2024-10-11 19:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-10-02 16:21:55 UTC
Current git master everything built on top of Fedora KDE 40. Qt 6.7.2, Kernel 6.10.11.


STEPS TO REPRODUCE
1. System Settings > users > Configure Fingerprint Authentication… > have at least one finger enrolled; enroll one if you don't have any.. Close the dialog if it's open.
2. Click Configure Fingerprint Authentication… again and go through the process of enrolling another finger. Close the dialog.
3. Click Configure Fingerprint Authentication… again


OBSERVED RESULT
Only the last finger enrolled is shown in the dialog.


EXPECTED RESULT
All enrolled fingers are shown in the dialog.
Comment 2 Bug Janitor Service 2024-10-03 14:57:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4784
Comment 3 Nicolas Fella 2024-10-04 14:29:18 UTC
Git commit 2562054018a539433eff47b67c0948546be85dbc by Nicolas Fella.
Committed on 04/10/2024 at 14:25.
Pushed by nicolasfella into branch 'master'.

Revert "Dialog: fix multiple binding loops"

This seems to cause issues in dialog users. While this change is likely
correct let's give us some more time to properly investigate and fix
Related: bug 493978, bug 493976

This reverts commit 66bfd9f6f5607d8e950355419e41de0dc1eaddd8.

M  +13   -3    src/dialogs/Dialog.qml

https://invent.kde.org/frameworks/kirigami/-/commit/2562054018a539433eff47b67c0948546be85dbc
Comment 4 Akseli Lahtinen 2024-10-11 19:28:45 UTC
Git commit 08bfc5a3aff369694abfaee9d35f0056b76db113 by Akseli Lahtinen.
Committed on 11/10/2024 at 19:28.
Pushed by akselmo into branch 'master'.

FingerprintDialog: Place ColumnLayout with the stack inside contentItem

This MR has two commits that affect the behavior of the dialog.

* FingerprintDialog: Place ColumnLayout with the stack inside contentItem

Previously we set the implicitSize directly to the dialog. This causes weird issues since
the stackView can be larger than the dialog. Setting the same values as the minimum values of
the stackView fixes the issue, since the size of the dialog is calculated through the stackView
values (since it's the dialogs content). Also fix some widths being applied into implicitWidth properties.

Requires https://invent.kde.org/frameworks/kirigami/-/merge_requests/1637
Related: bug 493978, bug 493976


* fingerprintmodel.cpp: Fix spamming signals if changing to same value

If any "set" method was called, such as "setDialogState", we
did not check for the previous state and just changed it,
then signaled the change.

This causes the FingerprintDialog StackView to get upset and
show a lot of warnings how it's not done yet.

Only change the state if it's not the same as the previous one to
avoid this issue.

M  +19   -11   kcms/users/src/fingerprintmodel.cpp
M  +2    -3    kcms/users/src/ui/FingerprintDialog.qml
M  +1    -1    kcms/users/src/ui/PickFinger.qml
M  +1    -1    kcms/users/src/ui/PicturesSheet.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/08bfc5a3aff369694abfaee9d35f0056b76db113